# getfittr

./: .env.example  .gitignore  CLAUDE.md  DEV_PRACTICES.md  LEARNING_LOG.md  SESSION_STARTER.md  pyproject.toml  requirements.txt
.claude/: launch.json
backend/: coach.py  database.py  main.py  models.py
backend/routers/: api.py  profile.py  sessions.py
frontend/: app.js  index.html  session.js  style.css  workout.js
