[project]
name = "getfittr"
version = "0.1.0"
description = "Personal local AI workout coaching app (pose analysis + Claude + RAG)"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.107.0",
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "uvicorn[standard]>=0.49.0",
]
